tests/NormalTests/paczka1/fuzzy1/17937306.err
Error in line 18: jIlyUW S827 82,4
Error in line 14: Ss64XJk S49 82,5
Error in line 22: jIlyUW S827 61,5
Error in line 27: jIlyUW S49 39,3
